Fixed issue with too much margin in the navbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500&display=swap');
 
 body{
+    padding:0;
+    margin:0;
+}
+body{
   font-family:'Montserrat', sans-serif;
 }
 
@@ -37,9 +41,8 @@ padding:0px;
 /*Setting the background to container*/
 .container{
 min-width:100%;
-height:100vh;
+height:120vh;
 background: url('../css/assets/old-ireland-fragm.jpg') no-repeat center center fixed;
-
 -webkit-background-size:cover;
 -moz-background-size:cover;
 -o-background-size:cover;
@@ -47,7 +50,7 @@ background-size:cover;
 display:flex;
 align-items:center;
 justify-content:center;
-padding-top:150px;
+padding-top:50px;
 
 }
 
@@ -66,12 +69,12 @@ div.col-sm.ireland{
 
 div.container.services-container{
     padding-top:20px;
-    height:120vh;  
+    height:100vh;  
 }
 
 div.container.about-container{
     color:white;
-    margin-top:60px;
+   margin-top:0;
 }
 
 /*Gray background to the Ethos jumbotron*/
